--- a/app/platform.android.css
+++ b/app/platform.android.css
@@ -1,6 +1,3 @@
 .link {
 	background-color: transparent;
 }
-action-bar, .main-color {
-	background-color: #2E6DAD;
-}
