--- a/app/platform.ios.css
+++ b/app/platform.ios.css
@@ -14,7 +14,3 @@ text-field {
 .link {
 	border-width: 0;
 }
-.main-color {
-	background-color: #2664A2;
-}
-
